@@ -39,7 +39,10 @@ Changes for v2.02
 - In the device upgrade editor:
   - Rename the Load button to Open, changed the mouse-over text to "Open a (RM or KM) device upgrade file."
   - Rename the Import button to Paste, changed the mouse-over help to "Paste a (RM, KM or IR) device upgrade from the clipboard.", enhanced to accept IR-formatted upgrades containing Device Upgrade and Protocol Upgrade text
-  - Rename the Save button to "Save as..." 
+  - Rename the Save button to "Save as..."
+-- Alpha 10a
+- Change the Paste to simply pop up the Import Raw Upgrade dialog. so change the text to "Import Raw".    
+- The Import Raw Upgrade dialog will prefill its fields if it finds an IR formatted upgrade in the clipboard.  Pasting an IR formatted upgrade into either the device or protocol code fields will parse the upgrade and update the appropriate fields in the dialog.
 
 Changes for v2.01
 -- Alpha --
